<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ayuda.AyudaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAyuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/menu_ayuda"
            app:titleTextColor="@color/white"/>

        <Button
            android:id="@+id/btnARportarProblema"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnredondeado"
            android:text="@string/ayuda_reportar_problema"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnASolicitudes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnredondeado"
            android:text="@string/ayuda_solicitudes"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnASoporteTecnico"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnredondeado"
            android:text="@string/ayuda_soporte_tecnico"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnAPreguntasFrecuentes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnredondeado"
            android:text="@string/ayuda_preguntas_frecuentes"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>